Adapt pom